реализация ФЗ-12. перенесены проверки из классов хранилищ в сервисы